# js-chess-engine

./: .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENT_GUIDE.md  README.md  SECURITY.md  eslint.config.js  index.html  jest.config.js  llms.txt  llms_project_context.txt  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-fix.yml  ci.yml
examples/: game-orchestration-demo.html
mcp-server/: package.json
mcp-server/src/: chess-engine.ts  index.ts  logger.ts  rate-limiter.ts  security.ts
src/: index.js  main.js
src/core/: Board.js  ChessGame.js  Game.js  GameState.js  MoveGenerator.js  MoveValidator.js  Piece.js  Rules.js
src/ui/: BoardRenderer.js  InputHandler.js  styles.css
src/utils/: Constants.js
tests/core/: Board.test.js  Game.test.js  MoveGenerator.test.js  MoveValidator.test.js  Piece.test.js
tests/ui/: InputHandler.test.js
tests/utils/: Constants.test.js
wasm/: Cargo.toml
wasm/src/: lib.rs
